--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ body {
   
   
   /* background: rgba(69, 178, 50, 1); */
-  background: linear-gradient(to right, rgba(69, 178, 50, 1), rgba(179, 255, 165, 1), rgba(117, 255, 93, 1));
+  /* background: linear-gradient(to right, rgba(69, 178, 50, 1), rgba(179, 255, 165, 1), rgba(117, 255, 93, 1)); */
   
   
 
