--- a/src/Components/Portfolio/Portfolio.css
+++ b/src/Components/Portfolio/Portfolio.css
@@ -2,7 +2,8 @@
     width: 100%;
     /* height: 100vh; */
     padding-bottom: 100px;
-    background-image: url(https://i.pinimg.com/originals/fc/50/f5/fc50f538705bb6cb7ea1fd0e20900e34.jpg);
+    background: rgb(50,25,25);
+    /* background-image: url(https://i.pinimg.com/originals/fc/50/f5/fc50f538705bb6cb7ea1fd0e20900e34.jpg); */
 }
 .padT {
     padding-top: 100px;
