--- a/src/Components/TopSection/TopSection.css
+++ b/src/Components/TopSection/TopSection.css
@@ -153,12 +153,10 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100vw;
-    /* height: 100vh; */
-    /* background: purple; */
+    width: 100%;
 }
 .sector {
-    width: 100vw;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
