--- a/src/Components/AboutSection/AboutStyles.css
+++ b/src/Components/AboutSection/AboutStyles.css
@@ -17,6 +17,11 @@
     box-shadow: 4px 4px gray;
 }
 
+.abImg {
+    box-shadow: 2px 2px rgb(251, 248, 240, 0.4);
+    width: 50%;
+}
+
 .flConCol {
     display: flex;
     flex-direction: column;
@@ -30,7 +35,36 @@
     align-items: center;
 }
 
+.abCont {
+    /* margin-left: 30px; */
+    width: 40%;
+    height: 48%;
+    display: flex;
+    padding-left: 25px;
+    padding-right: 20px;
+    flex-direction: column;
+    /* align-items: center; */
+    background: rgb(178, 178, 178);
+    box-shadow: 2px 2px rgb(235, 238, 255);
+}
+
 #fB {
     /* font-size: 100px; */
     font-size: 35px;
+}
+
+@media (max-width: 1090px){
+    .logoSizing {
+        width: 250px;
+    }
+    .uvuLogoSiz {
+        width: 250px;
+    }
+    .logoCont {
+        width: 250px;
+        height: 230px;
+    }
+    #fB {
+        font-size: 25px;
+    }
 }
